# interview-assistant

./: .gitignore  README.md  config.example.toml  extract_article.py  interview-assistant.py  profile.example.txt  pyproject.toml  requirements.txt  start.bat
.github/workflows/: ci.yml
interview_assistant/: __init__.py  __main__.py  app.py  audio.py  config.py  llm.py  transcriber.py
tests/: test_audio.py  test_config.py  test_llm.py
