[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "interview-assistant"
version = "2.3.0"
description = "双模式面试辅助工具：模拟面试 + 实战辅助，语音识别 + AI 生成参考回答"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "sounddevice",
    "webrtcvad",
    "faster-whisper",
    "zhconv",
]

[project.urls]
Source = "https://github.com/khusdasz-cmd/interview-assistant"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4", "setuptools>=68.0,<81"]

[tool.setuptools.packages.find]
include = ["interview_assistant*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"
